# qualisync-devops-qa

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/prompts/: generate-local-test-scenarios.md
.github/workflows/: quality-assurance.yml  web.yml  (+1 more)
doc/: .module_ideas.md  001.md  module_001.md  module_0011.md  module_001a.md  module_002.md  module_002a.md  module_003.md  module_003a.md  phase1.md
server/: .env.example  Dockerfile  Taskfile.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
server/db/: database.db  database.py  models.py
server/db/migrations/: 20260206_001_create_base_schema.sql  20260206_002_create_jwt_auth_migration.sql
server/log/: flake8.txt
server/migrations/: 20260206_001_create_base_schema.sql
server/resource/: auth.py
server/temp/middleware/: auth.py
server/temp/resource/: appointments.py  audit_log.py  auth.py  auth_users.py  medical_records.py  user_profiles.py
server/tests/e2e/: test_00_auth_e2e.py  test_01_e2e_init.py  test_auth_e2e.py  test_e2e_init.py
server/tests/integration/: test_00_integration_init.py  test_01_auth_integration.py  test_auth_integration.py
server/tests/unit/: test_00_unit_init.py  test_01_auth_unit.py  test_auth_unit.py  test_unit_init.py
web/: .dockerignore  .env.example  .env.test  .env.test.example  .prettierignore  .prettierrc  Dockerfile  Taskfile.yml  eslint-config-log.json  eslint.config.mts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.integ.config.ts
(+43 files in other folders)
