[project]
name = "qualisync-flask-api"
description = "Basically the Flask API used for Qualisync project by Migo for learning DevOps, automation, quality assurance, linting, etc"

[tool.black]
line-length = 88
exclude = '''
(
    /(
        venv
      | \.venv
      | db
      | pycache
    )
)
'''

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true
exclude = ["venv*", ".venv*", "db*", "pycache*", "temp*"]