[project]
name = "qualisync-flask-api"
version = "0.0.1a0"
description = "[AI-GENERATED DESCRIPTION] Flask API backend for a two-service web application (Next.js frontend + Flask backend) managed by Docker Compose. Provides REST endpoints for authentication, user management, and apartment/tenant operations, using SQLAlchemy ORM and supporting DevOps, automation, and QA workflows."
authors = [{ name = "Migo Gennesaret", email = "migueljustin.bunda@proton.me" }]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = ["tests/unit/**", "tests/integration/**"]

[tool.black]
line-length = 88
exclude = '''
(
    /(
        venv
      | \.venv
      | db
      | pycache
    )
)
'''

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = ['__init__.py:F401']
max-line-length = 88
count = true
exclude = ["venv*", ".venv*", "db*", "pycache*", "temp*"]
